syntax = "proto3";

option java_multiple_files = true;
option java_package = "autoferry.clients.simulation";
option java_outer_classname = "simulation";
option objc_class_prefix = "HLW";

package GeminiOSPInterface;

service Simulation {
    rpc DoStep(StepRequest) returns (StepResponse) {}
	rpc SetStartTime(SetStartTimeRequest) returns (SetStartTimeResponse) {}
}

message Pose {
    float north = 1;
    float east = 2;
    float heading = 3;
}

message StepRequest {
    repeated Pose VesselPoses = 1;
	float time = 2;
	float stepSize = 3;
}

message StepResponse {
    bool success = 1;
}

message SetStartTimeRequest {
	string time = 1;
}

message SetStartTimeResponse {
	bool success = 1;
}
